deployments/login/login-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login
  labels:
    app: login
spec:
  replicas: 3
  selector:
    matchLabels:
      app: login
  template:
    metadata:
      labels:
        app: login
    spec:
      containers:
#        - image: artifactory.ibaset.com/docker-ibaset/solui/login-view:i070
        - image: solumina/login-view:i070
          imagePullPolicy: IfNotPresent
          name: login
          ports:
            - containerPort: 5000
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /login/health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 30
          resources:
            requests:
              cpu: 50m
          volumeMounts:
            - mountPath: /opt/ibaset/solumina-web-login/config/.env
              subPath: .env
              name: login-mount
#      imagePullSecrets:
#      - name: regcred
      volumes:
        - name: login-mount
          configMap:
            name: login-cm
            items:
              - key: loginConfig
                path: .env

      restartPolicy: Always
status: {}
