deployments/login/login-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: login
  name: login
  annotations:
    konghq.com/override: kong-no-timeout
spec:
  ports:
  - name: "5000"
    port: 5000
    targetPort: 5000
  selector:
    app: login
#  externalIPs:
#   - 10.10.9.248
#status:
#  loadBalancer: {}
