deployments/login/login-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: login
  annotations:
    kubernetes.io/ingress.class: kong
    ingress.kubernetes.io/content-security-policy: "default-src 'self';script-src 'self' 'unsafe-inline';connect-src 'self';img-src 'self' data: blob:;style-src 'self' 'unsafe-inline';media-src 'self' blob: data:;font-src 'self' data:;frame-ancestors 'self';frame-src blob: 'self';object-src 'self' blob:;"
#    traefik.frontend.rule.type: /
spec:
  rules:
  - host: vl-devops01.ibaset.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: login
            port:
              number: 5000

      - path: /login/appVersion
        pathType: Prefix
        backend:
          service:
            name: login
            port:
              number: 5000
